testsuite/tests/parser/should_fail/T1344a.hs
module T1344a where

a = "Hel\x6c000000000000000 World"
b = "Hel\x6c0000000000000000 World"
c = '\1114112'


