testsuite/tests/parser/should_fail/T1344a.stderr

T1344a.hs:3:16: error: [GHC-21231]
    numeric escape sequence out of range at character '0'
